qt6/gen_qtablewidget.h

class QIcon;
class QTableWidgetItem;
class QTableWidgetSelectionRange;
typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QIcon QIcon;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMoveEvent QMoveEvent;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QStyleOptionFrame QStyleOptionFrame;
typedef struct QTableWidget QTableWidget;
typedef struct QTableWidgetItem QTableWidgetItem;
typedef struct QTableWidgetSelectionRange QTableWidgetSelectionRange;
typedef struct QTabletEvent QTabletEvent;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
bool QTableWidget_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QTableWidget_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* event);
bool QTableWidget_override_virtual_focusInEvent(void* self, intptr_t slot);
void QTableWidget_virtualbase_focusInEvent(void* self, QFocusEvent* event);
bool QTableWidget_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QTableWidget_virtualbase_focusOutEvent(void* self, QFocusEvent* event);
bool QTableWidget_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QTableWidget_virtualbase_keyPressEvent(void* self, QKeyEvent* event);
bool QTableWidget_override_virtual_resizeEvent(void* self, intptr_t slot);
void QTableWidget_virtualbase_resizeEvent(void* self, QResizeEvent* event);
bool QTableWidget_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QTableWidget_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* event);
bool QTableWidget_override_virtual_eventFilter(void* self, intptr_t slot);
bool QTableWidget_virtualbase_eventFilter(void* self, QObject* object, QEvent* event);
bool QTableWidget_override_virtual_minimumSizeHint(void* self, intptr_t slot);
QSize* QTableWidget_virtualbase_minimumSizeHint(const void* self);
bool QTableWidget_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QTableWidget_virtualbase_sizeHint(const void* self);
bool QTableWidget_override_virtual_setupViewport(void* self, intptr_t slot);
void QTableWidget_virtualbase_setupViewport(void* self, QWidget* viewport);
bool QTableWidget_override_virtual_wheelEvent(void* self, intptr_t slot);
void QTableWidget_virtualbase_wheelEvent(void* self, QWheelEvent* param1);
bool QTableWidget_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QTableWidget_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* param1);
bool QTableWidget_override_virtual_changeEvent(void* self, intptr_t slot);
void QTableWidget_virtualbase_changeEvent(void* self, QEvent* param1);
bool QTableWidget_override_virtual_initStyleOption(void* self, intptr_t slot);
void QTableWidget_virtualbase_initStyleOption(const void* self, QStyleOptionFrame* option);
bool QTableWidget_override_virtual_devType(void* self, intptr_t slot);
int QTableWidget_virtualbase_devType(const void* self);
bool QTableWidget_override_virtual_setVisible(void* self, intptr_t slot);
void QTableWidget_virtualbase_setVisible(void* self, bool visible);
bool QTableWidget_override_virtual_heightForWidth(void* self, intptr_t slot);
int QTableWidget_virtualbase_heightForWidth(const void* self, int param1);
bool QTableWidget_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QTableWidget_virtualbase_hasHeightForWidth(const void* self);
bool QTableWidget_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QTableWidget_virtualbase_paintEngine(const void* self);
bool QTableWidget_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QTableWidget_virtualbase_keyReleaseEvent(void* self, QKeyEvent* event);
bool QTableWidget_override_virtual_enterEvent(void* self, intptr_t slot);
void QTableWidget_virtualbase_enterEvent(void* self, QEnterEvent* event);
bool QTableWidget_override_virtual_leaveEvent(void* self, intptr_t slot);
void QTableWidget_virtualbase_leaveEvent(void* self, QEvent* event);
bool QTableWidget_override_virtual_moveEvent(void* self, intptr_t slot);
void QTableWidget_virtualbase_moveEvent(void* self, QMoveEvent* event);
bool QTableWidget_override_virtual_closeEvent(void* self, intptr_t slot);
void QTableWidget_virtualbase_closeEvent(void* self, QCloseEvent* event);
bool QTableWidget_override_virtual_tabletEvent(void* self, intptr_t slot);
void QTableWidget_virtualbase_tabletEvent(void* self, QTabletEvent* event);
bool QTableWidget_override_virtual_actionEvent(void* self, intptr_t slot);
void QTableWidget_virtualbase_actionEvent(void* self, QActionEvent* event);
bool QTableWidget_override_virtual_showEvent(void* self, intptr_t slot);
void QTableWidget_virtualbase_showEvent(void* self, QShowEvent* event);
bool QTableWidget_override_virtual_hideEvent(void* self, intptr_t slot);
void QTableWidget_virtualbase_hideEvent(void* self, QHideEvent* event);
bool QTableWidget_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QTableWidget_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, intptr_t* result);
bool QTableWidget_override_virtual_metric(void* self, intptr_t slot);
int QTableWidget_virtualbase_metric(const void* self, int param1);
bool QTableWidget_override_virtual_initPainter(void* self, intptr_t slot);
void QTableWidget_virtualbase_initPainter(const void* self, QPainter* painter);
bool QTableWidget_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QTableWidget_virtualbase_redirected(const void* self, QPoint* offset);
bool QTableWidget_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QTableWidget_virtualbase_sharedPainter(const void* self);
bool QTableWidget_override_virtual_childEvent(void* self, intptr_t slot);
void QTableWidget_virtualbase_childEvent(void* self, QChildEvent* event);
bool QTableWidget_override_virtual_customEvent(void* self, intptr_t slot);
void QTableWidget_virtualbase_customEvent(void* self, QEvent* event);
bool QTableWidget_override_virtual_connectNotify(void* self, intptr_t slot);
void QTableWidget_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QTableWidget_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QTableWidget_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QTableWidget_staticMetaObject();
void QTableWidget_delete(QTableWidget* self);