qt6/gen_qtablewidget.nim

proc fQTableWidget_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void{.importc: "QTableWidget_virtualbase_dragLeaveEvent".}
proc fcQTableWidget_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_dragLeaveEvent".}
proc fQTableWidget_virtualbase_focusInEvent(self: pointer, event: pointer): void{.importc: "QTableWidget_virtualbase_focusInEvent".}
proc fcQTableWidget_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_focusInEvent".}
proc fQTableWidget_virtualbase_focusOutEvent(self: pointer, event: pointer): void{.importc: "QTableWidget_virtualbase_focusOutEvent".}
proc fcQTableWidget_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_focusOutEvent".}
proc fQTableWidget_virtualbase_keyPressEvent(self: pointer, event: pointer): void{.importc: "QTableWidget_virtualbase_keyPressEvent".}
proc fcQTableWidget_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_keyPressEvent".}
proc fQTableWidget_virtualbase_resizeEvent(self: pointer, event: pointer): void{.importc: "QTableWidget_virtualbase_resizeEvent".}
proc fcQTableWidget_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_resizeEvent".}
proc fQTableWidget_virtualbase_inputMethodEvent(self: pointer, event: pointer): void{.importc: "QTableWidget_virtualbase_inputMethodEvent".}
proc fcQTableWidget_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_inputMethodEvent".}
proc fQTableWidget_virtualbase_eventFilter(self: pointer, objectVal: pointer, event: pointer): bool{.importc: "QTableWidget_virtualbase_eventFilter".}
proc fcQTableWidget_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_eventFilter".}
proc fQTableWidget_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QTableWidget_virtualbase_minimumSizeHint".}
proc fcQTableWidget_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_minimumSizeHint".}
proc fQTableWidget_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QTableWidget_virtualbase_sizeHint".}
proc fcQTableWidget_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_sizeHint".}
proc fQTableWidget_virtualbase_setupViewport(self: pointer, viewport: pointer): void{.importc: "QTableWidget_virtualbase_setupViewport".}
proc fcQTableWidget_override_virtual_setupViewport(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_setupViewport".}
proc fQTableWidget_virtualbase_wheelEvent(self: pointer, param1: pointer): void{.importc: "QTableWidget_virtualbase_wheelEvent".}
proc fcQTableWidget_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_wheelEvent".}
proc fQTableWidget_virtualbase_contextMenuEvent(self: pointer, param1: pointer): void{.importc: "QTableWidget_virtualbase_contextMenuEvent".}
proc fcQTableWidget_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_contextMenuEvent".}
proc fQTableWidget_virtualbase_changeEvent(self: pointer, param1: pointer): void{.importc: "QTableWidget_virtualbase_changeEvent".}
proc fcQTableWidget_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_changeEvent".}
proc fQTableWidget_virtualbase_initStyleOption(self: pointer, option: pointer): void{.importc: "QTableWidget_virtualbase_initStyleOption".}
proc fcQTableWidget_override_virtual_initStyleOption(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_initStyleOption".}
proc fQTableWidget_virtualbase_devType(self: pointer, ): cint{.importc: "QTableWidget_virtualbase_devType".}
proc fcQTableWidget_override_virtual_devType(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_devType".}
proc fQTableWidget_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QTableWidget_virtualbase_setVisible".}
proc fcQTableWidget_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_setVisible".}
proc fQTableWidget_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QTableWidget_virtualbase_heightForWidth".}
proc fcQTableWidget_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_heightForWidth".}
proc fQTableWidget_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QTableWidget_virtualbase_hasHeightForWidth".}
proc fcQTableWidget_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_hasHeightForWidth".}
proc fQTableWidget_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QTableWidget_virtualbase_paintEngine".}
proc fcQTableWidget_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_paintEngine".}
proc fQTableWidget_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QTableWidget_virtualbase_keyReleaseEvent".}
proc fcQTableWidget_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_keyReleaseEvent".}
proc fQTableWidget_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QTableWidget_virtualbase_enterEvent".}
proc fcQTableWidget_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_enterEvent".}
proc fQTableWidget_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QTableWidget_virtualbase_leaveEvent".}
proc fcQTableWidget_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_leaveEvent".}
proc fQTableWidget_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QTableWidget_virtualbase_moveEvent".}
proc fcQTableWidget_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_moveEvent".}
proc fQTableWidget_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QTableWidget_virtualbase_closeEvent".}
proc fcQTableWidget_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_closeEvent".}
proc fQTableWidget_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QTableWidget_virtualbase_tabletEvent".}
proc fcQTableWidget_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_tabletEvent".}
proc fQTableWidget_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QTableWidget_virtualbase_actionEvent".}
proc fcQTableWidget_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_actionEvent".}
proc fQTableWidget_virtualbase_showEvent(self: pointer, event: pointer): void{.importc: "QTableWidget_virtualbase_showEvent".}
proc fcQTableWidget_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_showEvent".}
proc fQTableWidget_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QTableWidget_virtualbase_hideEvent".}
proc fcQTableWidget_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_hideEvent".}
proc fQTableWidget_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr uint): bool{.importc: "QTableWidget_virtualbase_nativeEvent".}
proc fcQTableWidget_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_nativeEvent".}
proc fQTableWidget_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QTableWidget_virtualbase_metric".}
proc fcQTableWidget_override_virtual_metric(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_metric".}
proc fQTableWidget_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QTableWidget_virtualbase_initPainter".}
proc fcQTableWidget_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_initPainter".}
proc fQTableWidget_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QTableWidget_virtualbase_redirected".}
proc fcQTableWidget_override_virtual_redirected(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_redirected".}
proc fQTableWidget_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QTableWidget_virtualbase_sharedPainter".}
proc fcQTableWidget_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_sharedPainter".}
proc fQTableWidget_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QTableWidget_virtualbase_childEvent".}
proc fcQTableWidget_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_childEvent".}
proc fQTableWidget_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QTableWidget_virtualbase_customEvent".}
proc fcQTableWidget_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_customEvent".}
proc fQTableWidget_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QTableWidget_virtualbase_connectNotify".}
proc fcQTableWidget_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_connectNotify".}
proc fQTableWidget_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QTableWidget_virtualbase_disconnectNotify".}
proc fcQTableWidget_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_disconnectNotify".}
proc fcQTableWidget_staticMetaObject(): pointer {.importc: "QTableWidget_staticMetaObject".}
proc fcQTableWidget_delete(self: pointer) {.importc: "QTableWidget_delete".}


func init*(T: type QTableWidgetSelectionRange, h: ptr cQTableWidgetSelectionRange): QTableWidgetSelectionRange =
  T(h: h)
proc create*(T: type QTableWidgetSelectionRange, ): QTableWidgetSelectionRange =

  QTableWidgetSelectionRange.init(fcQTableWidgetSelectionRange_new())
proc create*(T: type QTableWidgetSelectionRange, top: cint, left: cint, bottom: cint, right: cint): QTableWidgetSelectionRange =

  QTableWidgetSelectionRange.init(fcQTableWidgetSelectionRange_new2(top, left, bottom, right))
proc topRow*(self: QTableWidgetSelectionRange, ): cint =

  fcQTableWidgetSelectionRange_topRow(self.h)

proc bottomRow*(self: QTableWidgetSelectionRange, ): cint =

  fcQTableWidgetSelectionRange_bottomRow(self.h)

proc leftColumn*(self: QTableWidgetSelectionRange, ): cint =

  fcQTableWidgetSelectionRange_leftColumn(self.h)

proc rightColumn*(self: QTableWidgetSelectionRange, ): cint =

  fcQTableWidgetSelectionRange_rightColumn(self.h)

proc rowCount*(self: QTableWidgetSelectionRange, ): cint =

  fcQTableWidgetSelectionRange_rowCount(self.h)

proc columnCount*(self: QTableWidgetSelectionRange, ): cint =

  fcQTableWidgetSelectionRange_columnCount(self.h)

proc delete*(self: QTableWidgetSelectionRange) =
  fcQTableWidgetSelectionRange_delete(self.h)

func init*(T: type QTableWidgetItem, h: ptr cQTableWidgetItem): QTableWidgetItem =
  T(h: h)
proc create*(T: type QTableWidgetItem, ): QTableWidgetItem =

  QTableWidgetItem.init(fcQTableWidgetItem_new())
proc create*(T: type QTableWidgetItem, text: string): QTableWidgetItem =

  QTableWidgetItem.init(fcQTableWidgetItem_new2(struct_miqt_string(data: text, len: csize_t(len(text)))))
proc create*(T: type QTableWidgetItem, icon: gen_qicon.QIcon, text: string): QTableWidgetItem =

  QTableWidgetItem.init(fcQTableWidgetItem_new3(icon.h, struct_miqt_string(data: text, len: csize_t(len(text)))))
proc create*(T: type QTableWidgetItem, other: QTableWidgetItem): QTableWidgetItem =
